--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -169,6 +169,7 @@
             padding-bottom: 10px;
             padding-top: 10px;
             padding-left: 20px;
+            padding-right: 20px;
             bottom: 0px;
             left: 0px;
             width: 100%;
