Fix bug in product.js

--- a/src/components/product/Product.module.scss
+++ b/src/components/product/Product.module.scss
@@ -1,7 +1,7 @@
 .product {
     display: flex;
     position: relative;
-  
+    width: 100%;
     .filter {
       width: 20%;
       // border: 2px solid var(--dark-blue);
