--- a/src/components/admin/returnMessage/ReturnMessage.module.scss
+++ b/src/components/admin/returnMessage/ReturnMessage.module.scss
@@ -1,3 +1,15 @@
+.status {
+  width: 100%;
+  max-width: 400px;
+  margin: 2rem 0;
+
+
+  .card {
+    padding: 1rem;
+    border: 2px solid #760700;
+  }  
+}
+
 .table {
     padding: 5px;
     width: 100%;
