--- a/src/components/reviewProducts/ReviewProducts.module.scss
+++ b/src/components/reviewProducts/ReviewProducts.module.scss
@@ -1,4 +1,27 @@
 .review {
+  .continue {
+    color: #760700;
+    background-color: transparent;
+    border-style: none;
+    cursor: pointer;
+  }
+  .card_img {
+    width: 100%;
+    max-width: 500px;
+    padding: 1rem;
+    margin-bottom: 23px;
+    display: flex;
+    flex-direction: column;
+    // align-items: center;
+    .prod_name {
+      // left: 0;
+      padding-bottom: 10px;
+    }
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
     .card {
       width: 100%;
       max-width: 500px;
