--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,9 +1,9 @@
 .fixed {
     width: 100%;
-    // position: fixed;
+    position: sticky;
     top: 0;
     transition: all 0.5s;
-    z-index: 9;
+    z-index: 1000;
     right: 0;
     // color: #fff;
     // padding: 8px 12px;
