--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -13,6 +13,10 @@
     // z-index: 10;
   }
 
+.toast-message{
+  font-size: 12px;
+  font-weight: 500;
+}
 .header-fixed-cart p {
   margin-left: 8px;
   }
