--- a/src/pages/orderHistory/History.module.scss
+++ b/src/pages/orderHistory/History.module.scss
@@ -40,9 +40,20 @@
         background-color: #eee;
       }
       .pending {
-        color: #760700;
+        color: blue;
         font-weight: 500;
       }
+      
+      .processing {
+        color: yellow;
+        font-weight: 500;
+      }
+      
+      .shipped {
+        color: orange;
+        font-weight: 500;
+      }
+      
       .delivered {
         color: green;
         font-weight: 500;
