--- a/src/components/product/productItem/ProductItem.module.scss
+++ b/src/components/product/productItem/ProductItem.module.scss
@@ -113,33 +113,34 @@
         margin-bottom: 1rem;
         h4 {
           font-size: 2.8rem;
-          font-weight: 400;
+          font-weight: 600;
         }
         p {
-          font-weight: 500;
+          font-weight: 600;
           color: var(--color-danger);
           font-size: 1.8rem;
+          color: #dc0000;
         }
       }
    
-      .cartButton {
-        /* "Add to cart" button in list view */
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: orangered;
-        width: 100%; /* width of the button */
-        height: 3.5rem; /* height of the button */
-        border: none;
-        border-radius: 5px;
-        color: #fff;
-        font-size: 1.5rem;
-        cursor: pointer;
-        margin-top: 1rem; /* space between items in list view */
+      // .cartButton {
+      //   /* "Add to cart" button in list view */
+      //   display: flex;
+      //   align-items: center;
+      //   justify-content: center;
+      //   background-color: orangered;
+      //   width: 100%; /* width of the button */
+      //   height: 3.5rem; /* height of the button */
+      //   border: none;
+      //   border-radius: 5px;
+      //   color: #fff;
+      //   font-size: 1.5rem;
+      //   cursor: pointer;
+      //   margin-top: 1rem; /* space between items in list view */
     
-        &:hover {
-          background-color: rgba(135, 55, 29, 0.844);
-        }
-      }
+      //   &:hover {
+      //     background-color: rgba(135, 55, 29, 0.844);
+      //   }
+      // }
     }
   }
