--- a/src/pages/orderHistory/History.module.scss
+++ b/src/pages/orderHistory/History.module.scss
@@ -58,5 +58,19 @@
         color: green;
         font-weight: 500;
       }
+      .return {
+        color: green;
+        font-weight: 500;
+      }
+      
+      .request-rejected {
+        color: red;
+        font-weight: 500;
+      }
+      
+      .follow-up-required {
+        color: yellow;
+        font-weight: 500;
+      }
     }
   }
