--- a/src/pages/checkout/CheckoutDetails.module.scss
+++ b/src/pages/checkout/CheckoutDetails.module.scss
@@ -2,18 +2,37 @@
   width: 100%;
   position: relative;
 
+  .card, .card2 {
+    width: 100%;
+    max-width: 800px; 
+    margin-bottom: 1rem;
+    box-sizing: border-box; 
+    padding: 1rem;
+
+  }
+
   .card {
     width: 100%;
     max-width: 500px;
     padding: 1rem;
     h3 {
-      font-weight: 300;
+      font-weight: 500;
+      font-size: 24px;
     }
+  }
+
+  .card2 {
+    width: 100%;
+    max-width: 500px;
+    // padding: 1rem;
   }
 
   form {
     width: 100%;
     display: flex;
+    color: #760700;
+    // flex-direction: row;
+    gap: 2rem;
 
     div {
       width: 100%;
@@ -23,7 +42,7 @@
       display: block;
       font-size: 1.4rem;
       font-weight: 500;
-      color: #760700;
+      // color: #760700;
     }
     input[type="text"],
     .select,
@@ -32,7 +51,7 @@
       font-size: 1.6rem;
       font-weight: 300;
       padding: 1rem;
-      margin: 1rem auto;
+      margin: 1rem auto; //auto
       width: 100%;
       border: 1px solid #777;
       border-radius: 3px;
