--- a/src/components/admin/returnProduct/ReturnProduct.module.scss
+++ b/src/components/admin/returnProduct/ReturnProduct.module.scss
@@ -42,17 +42,19 @@
       }
       .return {
         color: green;
-        font-weight: 500;
+        font-weight: 600;
       }
   
       .request-rejected {
         color: red;
-        font-weight: 500;
+        font-weight: 600;
       }
   
       .follow-up-required {
-        color: yellow;
-        font-weight: 500;
+        color: #ffca00;
+        font-weight: 600;
+        
+        
       }
     }
   }
