--- a/src/components/admin/slideshow/Slideshow.module.scss
+++ b/src/components/admin/slideshow/Slideshow.module.scss
@@ -87,6 +87,37 @@
     margin-left: .9rem;
     margin-right: .9rem;
     margin-bottom: 1rem;
+    .imageContainer {
+      position: relative;
+      display: inline-block;
+      overflow: hidden;
+      border-radius: 5px;
+      margin: 5px;
+  
+      img {
+        display: block;
+        width: 100%;
+        height: auto;
+      }
+  
+      .deleteButton {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        background-color: red;
+        border: none;
+        color: #fff;
+        font-size: 16px;
+        padding: 5px;
+        border-radius: 50%;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 20px;
+        height: 20px;
+      }
+    }  
     .choose {
       margin-bottom: -10px;
       margin-left: .6rem;
@@ -102,7 +133,7 @@
     }
     .uploaded {
       margin-left: 1.3rem;
-      margin-bottom: -5px;
+      margin-bottom: 5px;
     }
     .newslideshow_confirmcancel {
       .confirm_ns {
@@ -110,32 +141,34 @@
         margin-bottom: 5px;
         border: none;
         background-color: transparent;
-        font-size: 10px;
+        
         color: #fff;
         background-color: #4fb934;
         padding: 10px;
-        border-radius: 5px;
+        font-size: 1.4em;
+        font-weight: 500;
+        border-radius: 3px;
         cursor: pointer;
-        box-shadow: var(--box-shadow);
+      
 
         &:hover {
           // color: #000000;
           background-color: #1f8d04db;
         }
       }
+      
 
       .cancel {
         margin-left: 1rem;
         margin-bottom: 1rem;
         border: none;
         background-color: transparent;
-        font-size: 10px;
+        font-size: 1.4em;
         color: #fff;
         background-color: #cc0e00;
         padding: 10px;
-        border-radius: 5px;
+        border-radius: 3px;
         cursor: pointer;
-        box-shadow: var(--box-shadow);
         &:hover {
           // color: #ffca00;
           background-color: #9b0b00e1;
