Checkout (Province) & Slider Circle

--- a/src/components/checkoutSummary/CheckoutSummary.module.scss
+++ b/src/components/checkoutSummary/CheckoutSummary.module.scss
@@ -38,7 +38,7 @@
     justify-content: space-between;
     align-items: center;
     h3 {
-      color: #ddb412;
+      color: #000000;
     }
     h4 {
       color: #760700;
@@ -53,9 +53,9 @@
   margin-top: 0.7rem;
   margin-left: 0rem;
   .ship {
-    padding-bottom: 10px;
+    padding-bottom: 15px;
   }
   .cartItems {
-    padding-bottom: 2px;
+    padding-bottom: 3px;
   }
 }
