--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -43,6 +43,8 @@
       margin: 0 5px;
       background-color: #ffffff6f;
       cursor: pointer;
+      border: 1px solid #77777759;
+      box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.6);
     }
 
     .active {
