--- a/src/pages/checkout/CheckoutDetails.module.scss
+++ b/src/pages/checkout/CheckoutDetails.module.scss
@@ -20,6 +20,24 @@
       font-size: 24px;
     }
   }
+  
+  .dropdownContainer {
+    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+    // height: 20px;
+  }
+
+  .provinceDropdown {
+    font-size: 16px;
+    padding: 8px;
+    border: 1px solid #777; 
+    border-radius: 3px;
+    background-color: #fff;
+    color: #000000;
+    cursor: pointer;
+    margin-bottom: 10px;
+  }
 
   .card2 {
     width: 100%;
