CheckoutForm (Input Box) & Details (Design)

--- a/src/components/checkoutForm/CheckoutForm.module.scss
+++ b/src/components/checkoutForm/CheckoutForm.module.scss
@@ -1,6 +1,11 @@
+form {
+  gap: 2rem;
+}
+
 .checkout {
     width: 100%;
     position: relative;
+    margin-top: -80px;
   
     .card {
       width: 100%;
