--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -13,7 +13,7 @@
     width: 100%;
     height: 100%;
     opacity: 0;
-    transition: opacity 0.5s ease;
+    transition: opacity 0.5s ease, transform 0.5s ease;
    
 
     &.current {
@@ -78,6 +78,7 @@
     background: rgba(0, 0, 0, 0.4);
     animation: slide-up 1s ease 0.5s;
     animation-fill-mode: forwards;
+    transition: opacity 0.5s ease, top 1s ease-in-out;
     //   visibility: hidden;
     h2 {
       font-size: 4.5rem;
