--- a/src/pages/wishlist/modalWishlist.module.scss
+++ b/src/pages/wishlist/modalWishlist.module.scss
@@ -19,7 +19,7 @@
     position: absolute;
     
     right: 10px;
-    color: white;
+    color: red;
     font-size: 4em;
     cursor: pointer;
   }
