Fixed Responsiveness in Auth

--- a/src/pages/auth/auth.module.scss
+++ b/src/pages/auth/auth.module.scss
@@ -139,6 +139,7 @@
   
     .form {
       width: 35rem;
+      max-width: 100%;
       padding: 1.5rem;
       animation: slide-up 0.5s ease;
       h2 {
