--- a/src/components/product/productItem/ProductItem.module.scss
+++ b/src/components/product/productItem/ProductItem.module.scss
@@ -88,17 +88,18 @@
     background-color: #fff;
     margin: 1rem 0;
     .img {
-      padding: 1rem;
+     
       width: 100%;
-      // max-width: 35%;
+      max-width: 20rem;
       height: 100%;
       overflow: hidden;
       border-right: 2px solid #eee;
-      // border: 1px solid red;
+      
       img {
         width: 100%;
-        // height: 100%;
+        height: 100%;
         max-height: 100%;
+        object-fit: cover;
         cursor: pointer;
       }
     }
@@ -115,12 +116,14 @@
           font-size: 2.8rem;
           font-weight: 600;
         }
+        
         p {
           font-weight: 600;
           color: var(--color-danger);
           font-size: 1.8rem;
           color: #dc0000;
         }
+        
       }
    
       // .cartButton {
@@ -143,4 +146,17 @@
       //   }
       // }
     }
+   
   }
+  @media screen and (max-width: 768px) {
+    .content{
+      h4{
+        font-size: 2rem !important;
+      }
+      p{
+        font-size: 1.3rem !important;
+      }
+    }
+    
+  }
+  
