Changed Toast Container

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -16,6 +16,8 @@
 .toast-message{
   font-size: 12px;
   font-weight: 500;
+  border: 2px solid #a01212;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 .header-fixed-cart p {
   margin-left: 8px;
